[package]
name = "hello_world"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[dependencies]
rppal = "0.11.3"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
log = "0.4.8"
log4rs = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
ureq = "2.0.1"