[package]
name = "automation_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.26"
features = ["bundled"]

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version ="1.0.134", features = ["derive"] }
ureq = "2.4.0"
rppal = "0.13.1"
nexa-rs = { path="../nexa-rs" }